# NeuralNetwork-From-Scratch

./: CMakeLists.txt  LICENSE  NeuralNetwork.ipynb  README.md  functions.h  layer.h  main.cpp  neural_network.h  utils.h
